// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`固定的 CookHome 設定:信件輸出與抽設定前逐字相同 HTML 跳脫:使用者輸入的特殊字元不會變成標籤 1`] = `
{
  "html": "<!doctype html><html lang="zh-Hant"><body>
<p>&lt;b&gt;O&#39;Brien&lt;/b&gt; 您好:</p>
<p>您的申請「請假單:&quot;A&amp;B&quot; &lt;script&gt;」已退回修改。</p>
<p>理由:&lt;img src=x onerror=alert(1)&gt;</p>
<p>請開啟以下連結查看詳情:</p>
<p><a href="https://admin.example.com/requests/1">https://admin.example.com/requests/1</a></p>
<p>CookHome 後台管理系統</p>
</body></html>",
  "kind": "workflow-result",
  "link": "https://admin.example.com/requests/1",
  "subject": "【CookHome】申請已退回修改:請假單:"A&B" <script>",
  "text": "<b>O'Brien</b> 您好:

您的申請「請假單:"A&B" <script>」已退回修改。

理由:<img src=x onerror=alert(1)>

請開啟以下連結查看詳情:

https://admin.example.com/requests/1

CookHome 後台管理系統",
  "to": "ming@example.com",
}
`;

exports[`固定的 CookHome 設定:信件輸出與抽設定前逐字相同 啟用信 1`] = `
{
  "html": "<!doctype html><html lang="zh-Hant"><body>
<p>小明 您好:</p>
<p>您的 CookHome 後台帳號已建立。請在 2026/09/25 16:00 前開啟以下連結設定密碼,完成啟用:</p>
<p><a href="https://admin.example.com/set-password?token=abc&amp;next=%2F">https://admin.example.com/set-password?token=abc&amp;next=%2F</a></p>
<p>此連結只能使用一次;若已逾期,請在登入頁點「忘記密碼」重新取得連結。</p>
<p>若您沒有申請這個帳號,請忽略此信。</p>
<p>CookHome 後台管理系統</p>
</body></html>",
  "kind": "activation",
  "link": "https://admin.example.com/set-password?token=abc&next=%2F",
  "subject": "【CookHome】啟用您的後台帳號",
  "text": "小明 您好:

您的 CookHome 後台帳號已建立。請在 2026/09/25 16:00 前開啟以下連結設定密碼,完成啟用:

https://admin.example.com/set-password?token=abc&next=%2F

此連結只能使用一次;若已逾期,請在登入頁點「忘記密碼」重新取得連結。

若您沒有申請這個帳號,請忽略此信。

CookHome 後台管理系統",
  "to": "ming@example.com",
}
`;

exports[`固定的 CookHome 設定:信件輸出與抽設定前逐字相同 審核任務通知 1`] = `
{
  "html": "<!doctype html><html lang="zh-Hant"><body>
<p>審核者 您好:</p>
<p>您有一筆待審核的申請:「請假單:九月特休」(關卡:主管核准)。請開啟以下連結查看並審核:</p>
<p><a href="https://admin.example.com/requests/1">https://admin.example.com/requests/1</a></p>
<p>CookHome 後台管理系統</p>
</body></html>",
  "kind": "workflow-task",
  "link": "https://admin.example.com/requests/1",
  "subject": "【CookHome】待審核:請假單:九月特休",
  "text": "審核者 您好:

您有一筆待審核的申請:「請假單:九月特休」(關卡:主管核准)。請開啟以下連結查看並審核:

https://admin.example.com/requests/1

CookHome 後台管理系統",
  "to": "reviewer@example.com",
}
`;

exports[`固定的 CookHome 設定:信件輸出與抽設定前逐字相同 審核任務通知 2`] = `
{
  "html": "<!doctype html><html lang="zh-Hant"><body>
<p>審核者 您好:</p>
<p>您有一筆待審核的申請:「請假單」(關卡:主管核准)。請開啟以下連結查看並審核:</p>
<p><a href="https://admin.example.com/requests/1">https://admin.example.com/requests/1</a></p>
<p>CookHome 後台管理系統</p>
</body></html>",
  "kind": "workflow-task",
  "link": "https://admin.example.com/requests/1",
  "subject": "【CookHome】待審核:請假單",
  "text": "審核者 您好:

您有一筆待審核的申請:「請假單」(關卡:主管核准)。請開啟以下連結查看並審核:

https://admin.example.com/requests/1

CookHome 後台管理系統",
  "to": "reviewer@example.com",
}
`;

exports[`固定的 CookHome 設定:信件輸出與抽設定前逐字相同 審核結果通知(核准 / 駁回附理由 / 退回) 1`] = `
{
  "html": "<!doctype html><html lang="zh-Hant"><body>
<p>小明 您好:</p>
<p>您的申請「請假單」已核准。</p>
<p>請開啟以下連結查看詳情:</p>
<p><a href="https://admin.example.com/requests/1">https://admin.example.com/requests/1</a></p>
<p>CookHome 後台管理系統</p>
</body></html>",
  "kind": "workflow-result",
  "link": "https://admin.example.com/requests/1",
  "subject": "【CookHome】申請已核准:請假單",
  "text": "小明 您好:

您的申請「請假單」已核准。

請開啟以下連結查看詳情:

https://admin.example.com/requests/1

CookHome 後台管理系統",
  "to": "ming@example.com",
}
`;

exports[`固定的 CookHome 設定:信件輸出與抽設定前逐字相同 審核結果通知(核准 / 駁回附理由 / 退回) 2`] = `
{
  "html": "<!doctype html><html lang="zh-Hant"><body>
<p>小明 您好:</p>
<p>您的申請「請假單」已駁回。</p>
<p>理由:日期重疊</p>
<p>請開啟以下連結查看詳情:</p>
<p><a href="https://admin.example.com/requests/1">https://admin.example.com/requests/1</a></p>
<p>CookHome 後台管理系統</p>
</body></html>",
  "kind": "workflow-result",
  "link": "https://admin.example.com/requests/1",
  "subject": "【CookHome】申請已駁回:請假單",
  "text": "小明 您好:

您的申請「請假單」已駁回。

理由:日期重疊

請開啟以下連結查看詳情:

https://admin.example.com/requests/1

CookHome 後台管理系統",
  "to": "ming@example.com",
}
`;

exports[`固定的 CookHome 設定:信件輸出與抽設定前逐字相同 審核結果通知(核准 / 駁回附理由 / 退回) 3`] = `
{
  "html": "<!doctype html><html lang="zh-Hant"><body>
<p>小明 您好:</p>
<p>您的申請「請假單」已退回修改。</p>
<p>理由:日期重疊</p>
<p>請開啟以下連結查看詳情:</p>
<p><a href="https://admin.example.com/requests/1">https://admin.example.com/requests/1</a></p>
<p>CookHome 後台管理系統</p>
</body></html>",
  "kind": "workflow-result",
  "link": "https://admin.example.com/requests/1",
  "subject": "【CookHome】申請已退回修改:請假單",
  "text": "小明 您好:

您的申請「請假單」已退回修改。

理由:日期重疊

請開啟以下連結查看詳情:

https://admin.example.com/requests/1

CookHome 後台管理系統",
  "to": "ming@example.com",
}
`;

exports[`固定的 CookHome 設定:信件輸出與抽設定前逐字相同 重設密碼信 1`] = `
{
  "html": "<!doctype html><html lang="zh-Hant"><body>
<p>小明 您好:</p>
<p>我們收到您重設密碼的申請。請在 2026/09/25 16:00 前開啟以下連結設定新密碼:</p>
<p><a href="https://admin.example.com/set-password?token=abc&amp;next=%2F">https://admin.example.com/set-password?token=abc&amp;next=%2F</a></p>
<p>此連結只能使用一次;若已逾期,請在登入頁重新申請。</p>
<p>若這不是您本人的操作,請忽略此信,您的密碼不會改變。</p>
<p>CookHome 後台管理系統</p>
</body></html>",
  "kind": "password-reset",
  "link": "https://admin.example.com/set-password?token=abc&next=%2F",
  "subject": "【CookHome】重設密碼",
  "text": "小明 您好:

我們收到您重設密碼的申請。請在 2026/09/25 16:00 前開啟以下連結設定新密碼:

https://admin.example.com/set-password?token=abc&next=%2F

此連結只能使用一次;若已逾期,請在登入頁重新申請。

若這不是您本人的操作,請忽略此信,您的密碼不會改變。

CookHome 後台管理系統",
  "to": "ming@example.com",
}
`;
